bk_ida/gccida/c0/emit_block_move
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2087:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2088:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2089:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2090:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2091:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2092:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2093:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2094:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2095:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2096:5: error: expected ';' after expression
tree v13; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2096:6: error: use of undeclared identifier 'v13'
tree v13; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2105:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *fntype; // [rsp+38h] [rbp-78h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2113:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code code; // [rsp+60h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2114:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+64h] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2116:5: error: expected ';' after expression
tree v34; // [rsp+78h] [rbp-38h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2116:6: error: use of undeclared identifier 'v34'
tree v34; // [rsp+78h] [rbp-38h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2117:5: error: expected ';' after expression
tree call_expr; // [rsp+80h] [rbp-30h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2117:6: error: use of undeclared identifier 'call_expr'; did you mean 'save_expr'?
tree call_expr; // [rsp+80h] [rbp-30h] 
     ^~~~~~~~~
     save_expr
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/tree.h:2528:13: note: 'save_expr' declared here
extern tree save_expr                   PARAMS ((tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/expr.c:2127:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( x[1] ) 
^    ~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_block_move/src/obj/expr.o] Error 1
